# OKATEM_PRIVATE

RemoteApptics/: RemoteApptics.pro  RemoteApptics.pro.user.4.8-pre1  RemoteApptics.pro.user.8909dd8.4.9-pre1  RemoteApptics.pro.user.e376178  autocontrol.cpp  autocontrol.h  autocontrol.ui  autocontrolpanel.cpp  autocontrolpanel.h  autocontrolwindow.cpp  autocontrolwindow.h  autocontrolwindow.ui  autolockingpanel.cpp  autolockingpanel.h  calibrationpanel.cpp  calibrationpanel.h  calibrationwindow.cpp  calibrationwindow.h  calibrationwindow.ui  camerapanel.cpp  camerapanel.h  camerasettingspanel.cpp  camerasettingspanel.h  camerasettingswindow.cpp  camerasettingswindow.h  camerasettingswindow.ui  command.cpp  command.h  config.h  connectiondialog.cpp  connectiondialog.h  connectiondialog.ui  connectionpanel.cpp  connectionpanel.h  connectionwindow.cpp  connectionwindow.h  connectionwindow.ui  controller.cpp  controller.h  controlpanel.cpp  (+36 more)
apptics/: .CMakeLists.txt.swp  CMakeLists.txt  CMakeLists.txt.user.8909dd8.4.9-pre1  hello  main.cpp  sshFile.sh
apptics/src/: bananapi.cpp  bananapi.h  cameradriver.cpp  cameradriver.h  config.h  controller.cpp  controller.h  controllerinterface.cpp  controllerinterface.h  datatypes.h  driverinterface.cpp  driverinterface.h  environmentinterface.cpp  environmentinterface.h  ethernetdatatypes.h  ethernetsocket.cpp  ethernetsocket.h  globals.h  json.cpp  json.h  lasertracker.cpp  lasertracker.h  lcdhmi.cpp  lcdhmi.h  lorawan.cpp  lorawan.h  mainoperation.cpp  mainoperation.h  queue.h  remotecontrolinterface.cpp  remotecontrolinterface.h  remotecontroller.cpp  remotecontroller.h  routingtable.cpp  routingtable.h  serialcom.cpp  serialcom.h  sfpmonitor.cpp  sfpmonitor.h  spicom.cpp  (+8 more)
apptics_controller/: CMakeLists.txt  controller.cpp  controller.h  datatypes.h  main.cpp  udpsocket.cpp  udpsocket.h  videostream.cpp  videostream.h
build-RapidJson/: CMakeCache.txt  CTestTestfile.cmake  DartConfiguration.tcl  Makefile  RapidJSONConfig.cmake  cmake_install.cmake  install_manifest.txt
build-RapidJson/doc/: Makefile  cmake_install.cmake
build-RapidJson/example/: Makefile  cmake_install.cmake
build-RapidJson/test/: Makefile  cmake_install.cmake
build-RemoteApptics-Debug/: Makefile  moc_autocontrolpanel.cpp  moc_autocontrolwindow.cpp  moc_autolockingpanel.cpp  moc_calibrationpanel.cpp  moc_calibrationwindow.cpp  moc_camerapanel.cpp  moc_camerasettingspanel.cpp  moc_camerasettingswindow.cpp  moc_connectionpanel.cpp  moc_connectionwindow.cpp  moc_controlpanel.cpp  moc_controlwindow.cpp  moc_displaypanel.cpp  moc_mainwindow.cpp  moc_positionadd.cpp  qrc_images.cpp  ui_autocontrolwindow.h  ui_calibrationwindow.h  ui_camerasettingswindow.h  ui_connectionwindow.h  ui_mainwindow.h  ui_positionadd.h
build-RemoteApptics-Desktop-Debug/: autocontrolwindow.cpp  autocontrolwindow.h  autocontrolwindow.ui
build-RemoteApptics-Desktop_Qt_5_13_2_GCC_64bit-Debug/: Makefile  moc_autocontrolpanel.cpp  moc_autocontrolwindow.cpp  moc_autolockingpanel.cpp  moc_calibrationpanel.cpp  moc_calibrationwindow.cpp  moc_camerapanel.cpp  moc_camerasettingspanel.cpp  moc_camerasettingswindow.cpp  moc_connectionpanel.cpp  moc_connectionwindow.cpp  moc_controlpanel.cpp  moc_controlwindow.cpp  moc_displaypanel.cpp  moc_mainwindow.cpp  moc_positionadd.cpp  qrc_images.cpp  ui_autocontrolwindow.h  ui_calibrationwindow.h  ui_camerasettingswindow.h  ui_connectionwindow.h  ui_mainwindow.h  ui_positionadd.h
build-apptics-Arm_Linux-Debug/: CMakeCache.txt  Makefile  apptics.cbp  cmake_install.cmake  qtcsettings.cmake
html/: index.php  info.xml  interface.php  json  log.txt
html/css/: connection_style.css
html/script/: card-depth.js  connection-script.js  page_updater.js
stm32f746_bootloader/: Makefile  STM32F746ZETx_FLASH.ld  stm32f746.includes  stm32f746.ioc  stm32f746.xml  stm32f746_bootloader.files
stm32f746_bootloader/Inc/: flash.h  i2c.h  main.h  sensor.h  spi.h  spicom.h  stm32f7xx_it.h  tim.h  usart.h
stm32f746_bootloader/Src/: eth.c  flash.c  gpio.c  gps.c  i2c.c  main.c  motor.c  sensor.c  spi.c  spicom.c  stm32f7xx_it.c  tim.c  usart.c
stm32f746_rtos/: .cproject  .mxproject  .project  Makefile  STM32F746ZETx_FLASH.ld  stm32f746_rtos.creator.user.8909dd8.4.9-pre1  stm32f746_rtos.files  stm32f746_rtos.includes  stm32f746_rtos.ioc  stm32f746_rtos.xml
stm32f746_rtos/Inc/: FreeRTOSConfig.h  eth.h  flash.h  freertos.h  gps.h  gpsops.h  i2c.h  main.h  motor.h  motorops.h  sensor.h  sensorops.h  servo.h  sfp.h  spiops.h  stm32f7xx_hal_conf.h  stm32f7xx_it.h  tim.h  usart.h
stm32f746_rtos/Src/: eth.c  flash.c  freertos.c  gpio.c  gps.c  gpsops.c  i2c.c  main.c  motor.c  motorops.c  sensor.c  sensorops.c  servo.c  sfp.c  spi.c  spiops.c  stm32f7xx_it.c  tim.c  usart.c
udp2uart/Debug/: makefile  sshFile.sh  udp2uart
udp2uart/src/: PackageQueue.cpp  PracticalSocket.cpp  SerialLib.cpp  SerialLib.h  TcpSocket.cpp  TcpSocket.h  config.h  udp2uart.cpp
videoPlay/: .cproject  .project
videoPlay/src/: SerialLib.cpp  SerialLib.h  TcpSocket.cpp  config.h  videoPlay.cpp
videoTransmit/: .cproject  .project
videoTransmit/src/: .videoTransmit.cpp.swp  PackageQueue.cpp  (+5 more)
(+32 files in other folders)
